adapting naming form

--- a/views/templates/admin/form.html.twig
+++ b/views/templates/admin/form.html.twig
@@ -14,7 +14,7 @@
     <div class="card">
         <h3 class="card-header">
             <i class="material-icons">mail_outline</i>
-            {{ 'Forms'|trans({}, 'Modules.Demodoctrine.Admin') }}
+            {{ 'Forms'|trans({}, 'Modules.formgenerator.Admin') }}
         </h3>
         <div class="card-body card-block">
             <div class="form-wrapper card-text">
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="card-footer">
-            <a href="{{ path('ps_demodoctrine_form_index') }}" class="btn btn-outline-secondary">
+            <a href="{{ path('ps_formgenerator_form_index') }}" class="btn btn-outline-secondary">
                 {{ 'Cancel'|trans({}, 'Admin.Actions') }}
             </a>
             <button class="btn btn-primary float-right">
