--- a/views/css/quotes.css
+++ b/views/css/quotes.css
@@ -1,7 +1,7 @@
-.demo-doctrine-quotes .blockquote {
+.demo-doctrine-forms .blockform {
     background-color: #ffffff;
 }
 
-.demo-doctrine-quotes .blockquote-footer {
+.demo-doctrine-forms .blockform-footer {
     color: #7a7a7a;
 }
